--- a/pubchem_dnn.ipynb
+++ b/pubchem_dnn.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -72,9 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -90,18 +97,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'class_weight' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-c630ed067efd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mclass_weights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclass_weight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_class_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'balanced'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreate_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'class_weight' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "16110/16110 [==============================] - 4s - loss: 0.6531 - acc: 0.6145     \n",
+      "Epoch 2/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.5821 - acc: 0.6999     \n",
+      "Epoch 3/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.5444 - acc: 0.7316     \n",
+      "Epoch 4/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.5151 - acc: 0.7520     \n",
+      "Epoch 5/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.4842 - acc: 0.7714     \n",
+      "Epoch 6/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.4561 - acc: 0.7910     \n",
+      "Epoch 7/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.4269 - acc: 0.8094     \n",
+      "Epoch 8/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.3972 - acc: 0.8263     \n",
+      "Epoch 9/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.3642 - acc: 0.8453     \n",
+      "Epoch 10/10\n",
+      "16110/16110 [==============================] - 0s - loss: 0.3379 - acc: 0.8590     \n",
+      "14400/16112 [=========================>....] - ETA: 0s2017-09-24 14:23:31,958 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.67      0.65      0.66      8056\n",
+      "          1       0.66      0.67      0.67      8056\n",
+      "\n",
+      "avg / total       0.66      0.66      0.66     16112\n",
+      "\n",
+      "Epoch 1/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.6530 - acc: 0.6100     \n",
+      "Epoch 2/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.5836 - acc: 0.6976     \n",
+      "Epoch 3/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.5488 - acc: 0.7251     \n",
+      "Epoch 4/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.5179 - acc: 0.7483     \n",
+      "Epoch 5/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.4900 - acc: 0.7659     \n",
+      "Epoch 6/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.4565 - acc: 0.7884     \n",
+      "Epoch 7/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.4259 - acc: 0.8067     \n",
+      "Epoch 8/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.3918 - acc: 0.8268     \n",
+      "Epoch 9/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.3600 - acc: 0.8454     \n",
+      "Epoch 10/10\n",
+      "16112/16112 [==============================] - 0s - loss: 0.3300 - acc: 0.8597     \n",
+      "14200/16110 [=========================>....] - ETA: 0s2017-09-24 14:23:40,893 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.68      0.66      0.67      8055\n",
+      "          1       0.67      0.69      0.68      8055\n",
+      "\n",
+      "avg / total       0.68      0.68      0.68     16110\n",
+      "\n"
      ]
     }
    ],
@@ -116,18 +172,19 @@
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import roc_auc_score, f1_score\n",
-    "from sklearn.utils import compute_class_weight\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
     "\n",
     "import pickle\n",
     "\n",
     "k_fold_splits = 2\n",
     "global_random_state = 42\n",
     "\n",
-    "with open('data.classification.nonsampled.pickle', 'rb') as f:\n",
+    "with open('data.classification.undersampled.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
     "    (X, y) = pickle.load(f)\n",
     "\n",
-    "class_weights = class_weight.compute_class_weight('balanced', np.unique(y), y)\n",
+    "class_weights = compute_class_weight('balanced', np.unique(y), y)\n",
+    "\n",
     "    \n",
     "def create_model() :\n",
     "    model = Sequential()\n",
@@ -162,9 +219,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-09-24 14:23:40,921 - INFO - Trying a larger network\n",
+      "Epoch 1/10\n",
+      "16110/16110 [==============================] - 2s - loss: 0.6333 - acc: 0.6379     \n",
+      "Epoch 2/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.4921 - acc: 0.7657     \n",
+      "Epoch 3/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.2921 - acc: 0.8765     \n",
+      "Epoch 4/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.1443 - acc: 0.9438     \n",
+      "Epoch 5/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.0834 - acc: 0.9712     \n",
+      "Epoch 6/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.0478 - acc: 0.9834     \n",
+      "Epoch 7/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.0501 - acc: 0.9843     \n",
+      "Epoch 8/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.0277 - acc: 0.9909     \n",
+      "Epoch 9/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.0217 - acc: 0.9937     \n",
+      "Epoch 10/10\n",
+      "16110/16110 [==============================] - 1s - loss: 0.0173 - acc: 0.9944     \n",
+      "15800/16112 [============================>.] - ETA: 0s2017-09-24 14:23:57,073 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.67      0.71      0.69      8056\n",
+      "          1       0.69      0.66      0.67      8056\n",
+      "\n",
+      "avg / total       0.68      0.68      0.68     16112\n",
+      "\n",
+      "Epoch 1/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.6331 - acc: 0.6411     \n",
+      "Epoch 2/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.4932 - acc: 0.7649     \n",
+      "Epoch 3/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.2869 - acc: 0.8761     \n",
+      "Epoch 4/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.1288 - acc: 0.9507     \n",
+      "Epoch 5/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.0790 - acc: 0.9719     \n",
+      "Epoch 6/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.0521 - acc: 0.9827     \n",
+      "Epoch 7/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.0391 - acc: 0.9872     \n",
+      "Epoch 8/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.0235 - acc: 0.9923     \n",
+      "Epoch 9/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.0168 - acc: 0.9946     \n",
+      "Epoch 10/10\n",
+      "16112/16112 [==============================] - 1s - loss: 0.0213 - acc: 0.9937     \n",
+      "15700/16110 [============================>.] - ETA: 0s2017-09-24 14:24:12,859 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.67      0.73      0.70      8055\n",
+      "          1       0.71      0.64      0.67      8055\n",
+      "\n",
+      "avg / total       0.69      0.69      0.69     16110\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try using DNN on the full non-sampled dataset, but with class_weight set and larger network. It didn't work\n",
     "\n",
