--- a/pubchem_regression_notsampled.ipynb
+++ b/pubchem_regression_notsampled.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "## Results ##\n",
     "\n",
-    "We use the SMILES string, a common representation for a molecule amongst chemists, to begin the featurization process. Because the length of this string varies, it is normalized in the form of a Morgan Fingerprint; these are then used to train various regression models, which we then use as binary classifiers. This is to see if the continuous input in the activity score has predictive value"
+    "We use the SMILES string, a common representation for a molecule amongst chemists, to begin the featurization process. Because the length of this string varies, it is normalized in the form of a Morgan Fingerprint; these are then used to train various regression models, which we then use as binary classifiers. This is to see if the continuous input in the activity score has predictive value. More specifically, our goal here is to find the highest precision in the 'True' label class so as not to miss any potentially useful compounds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,20 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n",
-      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n",
-      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n",
-      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -60,16 +51,6 @@
     "\n",
     "np.random.seed(global_random_state)\n",
     "\n",
-    "\n",
-    "active_pct = 0.073125471\n",
-    "inactive_pct = 1 - active_pct\n",
-    "\n",
-    "# We set the inactive to have the weight of the active, and vice versa, to account for imbalance\n",
-    "#class_weights = { 0: active_pct, 1: inactive_pct }\n",
-    "\n",
-    "class_weights = 'balanced'\n",
-    "\n",
-    "\n",
     "import logging\n",
     "logger = logging.getLogger()\n",
     "logger.setLevel(logging.INFO)\n",
@@ -84,72 +65,43 @@
     "ch = logging.StreamHandler(sys.stdout)\n",
     "ch.setLevel(logging.INFO)\n",
     "ch.setFormatter(formatter)\n",
-    "logger.addHandler(ch)\n",
-    "\n",
-    "logger.info('This is a test log message.')"
+    "logger.addHandler(ch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
-      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
-      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
-      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
-      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
-      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
-      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
-      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
-      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
-      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
-      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
-      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
-      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
-      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
-      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
-      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
-      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
-      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
-      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
-      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
-      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
-      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
-      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
-      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
-      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
-      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
-      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
-      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
-      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
-      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
-      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
-      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
-      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
-      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
-      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
-      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
-      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
-      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
-      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
-      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
-      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
-      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
-      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
-      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
-      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
-      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
-      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
-      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
-      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n",
-      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n",
-      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n",
-      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n"
+      "2017-09-24 15:15:06,819 - INFO - Processed index: 0\n",
+      "2017-09-24 15:15:14,442 - INFO - Processed index: 10000\n",
+      "2017-09-24 15:15:21,863 - INFO - Processed index: 20000\n",
+      "2017-09-24 15:15:29,500 - INFO - Processed index: 30000\n",
+      "2017-09-24 15:15:37,187 - INFO - Processed index: 40000\n",
+      "2017-09-24 15:15:44,634 - INFO - Processed index: 50000\n",
+      "2017-09-24 15:15:51,897 - INFO - Processed index: 60000\n",
+      "2017-09-24 15:15:58,585 - INFO - Processed index: 70000\n",
+      "2017-09-24 15:16:06,000 - INFO - Processed index: 80000\n",
+      "2017-09-24 15:16:13,257 - INFO - Processed index: 90000\n",
+      "2017-09-24 15:16:20,820 - INFO - Processed index: 100000\n",
+      "2017-09-24 15:16:27,989 - INFO - Processed index: 110000\n",
+      "2017-09-24 15:16:35,501 - INFO - Processed index: 120000\n",
+      "2017-09-24 15:16:43,208 - INFO - Processed index: 130000\n",
+      "2017-09-24 15:16:50,753 - INFO - Processed index: 140000\n",
+      "2017-09-24 15:16:58,095 - INFO - Processed index: 150000\n",
+      "2017-09-24 15:17:05,133 - INFO - Processed index: 160000\n",
+      "2017-09-24 15:17:12,057 - INFO - Processed index: 170000\n",
+      "2017-09-24 15:17:18,777 - INFO - Processed index: 180000\n",
+      "2017-09-24 15:17:25,671 - INFO - Processed index: 190000\n",
+      "2017-09-24 15:17:32,808 - INFO - Processed index: 200000\n",
+      "2017-09-24 15:17:39,907 - INFO - Processed index: 210000\n",
+      "Molecule failed featurization\n",
+      "218052\n",
+      "2017-09-24 15:17:47,187 - INFO - Processed index: 220000\n"
      ]
     }
    ],
@@ -215,9 +167,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-09-24 15:18:18,290 - INFO - Successfully loaded 220364 compounds.\n",
+      "2017-09-24 15:24:48,929 - INFO - Computed mse score of: 317.520810371325\n",
+      "2017-09-24 15:24:48,930 - INFO - How good is it as a classifier at 0.4 threshold?\n",
+      "2017-09-24 15:24:48,956 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.75      0.77      0.76     74223\n",
+      "       True       0.50      0.48      0.49     35959\n",
+      "\n",
+      "avg / total       0.67      0.67      0.67    110182\n",
+      "\n",
+      "2017-09-24 15:24:48,957 - INFO - How good is it at predicting True compounds at 0.9 threshold?\n",
+      "2017-09-24 15:24:48,983 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.75      0.77      0.76     74223\n",
+      "       True       0.50      0.48      0.49     35959\n",
+      "\n",
+      "avg / total       0.67      0.67      0.67    110182\n",
+      "\n",
+      "2017-09-24 15:31:29,189 - INFO - Computed mse score of: 316.89158771956033\n",
+      "2017-09-24 15:31:29,190 - INFO - How good is it as a classifier at 0.4 threshold?\n",
+      "2017-09-24 15:31:29,216 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.75      0.77      0.76     74076\n",
+      "       True       0.51      0.48      0.49     36106\n",
+      "\n",
+      "avg / total       0.67      0.68      0.67    110182\n",
+      "\n",
+      "2017-09-24 15:31:29,217 - INFO - How good is it at predicting True compounds at 0.9 threshold?\n",
+      "2017-09-24 15:31:29,242 - INFO -              precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.75      0.77      0.76     74076\n",
+      "       True       0.51      0.48      0.49     36106\n",
+      "\n",
+      "avg / total       0.67      0.68      0.67    110182\n",
+      "\n",
+      "2017-09-24 15:31:29,243 - INFO - Average mse score is: 317.20619904544265\n"
+     ]
+    }
+   ],
    "source": [
     "# First we look at using a DecisionTreeRegressor, but since the performance on active compounds is so poor, we don't\n",
     "\n",
@@ -264,14 +259,14 @@
     "    mse_avg = mse_avg + mse\n",
     "    \n",
     "    y_pred_binary = y_pred > .4\n",
-    "    y_test_binary = y_test[0:] > .4\n",
+    "    y_test_binary = y_test > .4\n",
     "\n",
     "    logger.info(\"How good is it as a classifier at 0.4 threshold?\")\n",
     "    logger.info(classification_report(y_test_binary, y_pred_binary))\n",
     "    \n",
     "    logger.info(\"How good is it at predicting True compounds at 0.9 threshold?\")\n",
     "    y_pred_binary = y_pred > .9\n",
-    "    y_test_binary = y_test[0:] > .9\n",
+    "    y_test_binary = y_test > .4\n",
     "    \n",
     "    logger.info(classification_report(y_test_binary, y_pred_binary))\n",
     "    \n",
@@ -289,78 +284,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import keras\n",
-    "print(keras.backend.backend())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# What about a deep neural network?\n",
-    "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras import metrics\n",
-    "from keras.wrappers.scikit_learn import KerasRegressor\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import f1_score, classification_report\n",
-    "\n",
-    "kf = KFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
-    "\n",
-    "\n",
-    "global_random_state = 42\n",
-    "\n",
-    "logger.info(\"Trying a large DNN\")\n",
-    "\n",
-    "with open('data.regression.undersampled.pickle', 'rb') as f:\n",
-    "    # Pickle the 'data' dictionary using the highest protocol available.\n",
-    "    (X,y) = pickle.load(f)\n",
-    "\n",
-    "def create_model() :\n",
-    "    model = Sequential()\n",
-    "    model.add(Dense(1024, input_dim=2048, activation='relu'))\n",
-    "    model.add(Dense(512, activation='relu'))\n",
-    "    model.add(Dense(256, activation='relu'))\n",
-    "    model.add(Dense(128, activation='relu'))\n",
-    "    model.add(Dense(1, activation='sigmoid'))\n",
-    "    model.compile(loss='mean_squared_error', optimizer='adam', metrics=[\"mae\"])\n",
-    "    return model\n",
-    "\n",
-    "for train_index, test_index in kf.split(X,y) :\n",
-    "\n",
-    "    X_train = X[train_index]\n",
-    "    X_test = X[test_index]\n",
-    "    y_train = y[train_index]\n",
-    "    y_test = y[test_index]\n",
-    "\n",
-    "    model = KerasRegressor(build_fn=create_model, epochs=10, batch_size=1000, verbose=1)\n",
-    "    model.fit(X_train,y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    \n",
-    "    logger.info(\"How good is it as a classifier at 0.4 threshold?\")\n",
-    "    \n",
-    "    y_pred_binarized = y_pred >= .4\n",
-    "    y_test_binarized = y_test[0:] >= .4\n",
-    "    fscore = f1_score(y_pred_binarized,y_test_binarized)\n",
-    "    logger.info(classification_report(y_test_binarized, y_pred_binarized))\n",
-    "\n",
-    "    \n",
-    "    logger.info(\"How good is it at predicting True compounds at 0.9 threshold?\")\n",
-    "    logger.info(classification_report(y_test_binary, y_pred_binary))\n",
-    "    \n",
-    "    y_pred_binarized = y_pred >= .9\n",
-    "    y_test_binarized = y_test[0:] >= .9\n",
-    "    \n",
-    "    logger.info(classification_report(y_test_binarized,y_pred_binarized))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
