Conv model partial success

--- a/pubchem_dnn.ipynb
+++ b/pubchem_dnn.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -97,15 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "16110/16110 [==============================] - 4s - loss: 0.6531 - acc: 0.6145     \n",
+      "16110/16110 [==============================] - 11s - loss: 0.6531 - acc: 0.6145    \n",
       "Epoch 2/10\n",
       "16110/16110 [==============================] - 0s - loss: 0.5821 - acc: 0.6999     \n",
       "Epoch 3/10\n",
@@ -121,18 +128,18 @@
       "Epoch 8/10\n",
       "16110/16110 [==============================] - 0s - loss: 0.3972 - acc: 0.8263     \n",
       "Epoch 9/10\n",
-      "16110/16110 [==============================] - 0s - loss: 0.3642 - acc: 0.8453     \n",
+      "16110/16110 [==============================] - 0s - loss: 0.3643 - acc: 0.8449     \n",
       "Epoch 10/10\n",
-      "16110/16110 [==============================] - 0s - loss: 0.3379 - acc: 0.8590     \n",
-      "14400/16112 [=========================>....] - ETA: 0s2017-09-24 14:23:31,958 - INFO -              precision    recall  f1-score   support\n",
+      "16110/16110 [==============================] - 0s - loss: 0.3378 - acc: 0.8588     \n",
+      "15800/16112 [============================>.] - ETA: 0s2017-09-24 20:51:20,850 - INFO -              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.67      0.65      0.66      8056\n",
+      "          0       0.67      0.66      0.66      8056\n",
       "          1       0.66      0.67      0.67      8056\n",
       "\n",
       "avg / total       0.66      0.66      0.66     16112\n",
       "\n",
       "Epoch 1/10\n",
-      "16112/16112 [==============================] - 1s - loss: 0.6530 - acc: 0.6100     \n",
+      "16112/16112 [==============================] - 0s - loss: 0.6530 - acc: 0.6100     \n",
       "Epoch 2/10\n",
       "16112/16112 [==============================] - 0s - loss: 0.5836 - acc: 0.6976     \n",
       "Epoch 3/10\n",
@@ -151,7 +158,7 @@
       "16112/16112 [==============================] - 0s - loss: 0.3600 - acc: 0.8454     \n",
       "Epoch 10/10\n",
       "16112/16112 [==============================] - 0s - loss: 0.3300 - acc: 0.8597     \n",
-      "14200/16110 [=========================>....] - ETA: 0s2017-09-24 14:23:40,893 - INFO -              precision    recall  f1-score   support\n",
+      "15500/16110 [===========================>..] - ETA: 0s2017-09-24 20:51:29,496 - INFO -              precision    recall  f1-score   support\n",
       "\n",
       "          0       0.68      0.66      0.67      8055\n",
       "          1       0.67      0.69      0.68      8055\n",
@@ -206,6 +213,87 @@
     "\n",
     "    classifier = KerasClassifier(build_fn=create_model, epochs=10, batch_size=100, verbose=1)\n",
     "    classifier.fit(X_train,y_train,class_weight=class_weights)\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "    logger.info(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What about a deep neural network?\n",
+    "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
+    "\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras import metrics\n",
+    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import roc_auc_score, f1_score\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from keras.layers.convolutional import Convolution1D\n",
+    "from keras.layers import Conv1D, GlobalMaxPooling1D\n",
+    "from keras.layers import Dense, Dropout, Activation\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "k_fold_splits = 2\n",
+    "global_random_state = 42\n",
+    "\n",
+    "filters = 250\n",
+    "kernel_size = 2\n",
+    "hidden_dims = 5000\n",
+    "\n",
+    "with open('data.classification.undersampled.pickle', 'rb') as f:\n",
+    "    # Pickle the 'data' dictionary using the highest protocol available.\n",
+    "    (X, y) = pickle.load(f)\n",
+    "\n",
+    "X_reshaped = np.expand_dims(X, axis=2)\n",
+    "    \n",
+    "#class_weights = compute_class_weight('balanced', np.unique(y), y)\n",
+    "    \n",
+    "def create_model() :\n",
+    "    model = Sequential()\n",
+    "    \n",
+    "    model.add(Conv1D(filters, kernel_size,padding='valid',activation='relu',strides=1,input_shape=(None,2048)))\n",
+    "    model.add(GlobalMaxPooling1D())\n",
+    "\n",
+    "    # We add a vanilla hidden layer:\n",
+    "    model.add(Dense(hidden_dims))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(Activation('relu'))\n",
+    "\n",
+    "    # We project onto a single unit output layer, and squash it with a sigmoid:\n",
+    "    model.add(Dense(1))\n",
+    "    model.add(Activation('sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\"accuracy\"])\n",
+    "    return model\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
+    "\n",
+    "\n",
+    "for train_index, test_index in skf.split(X,y) :\n",
+    "\n",
+    "    X_train = X[train_index]\n",
+    "    X_test = X[test_index]\n",
+    "    y_train = y[train_index]\n",
+    "    y_test = y[test_index]\n",
+    "\n",
+    "    classifier = KerasClassifier(build_fn=create_model, epochs=10, batch_size=100, verbose=1)\n",
+    "    classifier.fit(X_train[:,None,:],y_train,class_weight=class_weights)\n",
     "    y_pred = classifier.predict(X_test)\n",
     "    logger.info(classification_report(y_test, y_pred))\n"
    ]
@@ -331,9 +419,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pubchem-sklearn]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pubchem-sklearn-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
