--- a/pubchem_regression.ipynb
+++ b/pubchem_regression.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -187,27 +187,33 @@
    "source": [
     "# Ensure even distribution\n",
     "\n",
-    "with open(\"data.regression.nonsampled.pickle\",\"rb\") as f:\n",
+    "with open(\"data.classification.undersampled.pickle\",\"rb\") as f:\n",
     "    (X, y) = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0.   0.   0.   0.   0.   0.  40.   0.  10.  40.   0.   0.   0.   0.   0.\n",
-      "  10.  10.  60.   0.  40.]\n",
-      "2017-09-24 20:43:19,683 - INFO - Scaling inputs down\n",
-      "[ 0.   0.   0.   0.   0.   0.   0.4  0.   0.1  0.4  0.   0.   0.   0.   0.\n",
-      "  0.1  0.1  0.6  0.   0.4]\n",
-      "2017-09-24 20:43:19,686 - INFO - Trying a large DNN\n",
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n",
       "Dimensions are: 3\n",
-      "Epoch 1/10\n"
+      "Epoch 1/10\n",
+      "16111/16111 [==============================] - 1s - loss: 0.6321 - acc: 0.6410     \n",
+      "Epoch 2/10\n",
+      "16111/16111 [==============================] - 1s - loss: 0.4883 - acc: 0.7672     \n",
+      "Epoch 3/10\n",
+      "16111/16111 [==============================] - 1s - loss: 0.2875 - acc: 0.8810     \n",
+      "Epoch 4/10\n",
+      "16111/16111 [==============================] - 1s - loss: 0.1411 - acc: 0.9466     \n",
+      "Epoch 5/10\n",
+      " 8500/16111 [==============>...............] - ETA: 0s - loss: 0.0624 - acc: 0.9786"
      ]
     }
    ],
@@ -226,18 +232,18 @@
     "\n",
     "print(y[20:40])\n",
     "\n",
-    "logger.info(\"Scaling inputs down\")\n",
-    "y_float = y.astype(float)\n",
+    "#logger.info(\"Scaling inputs down\")\n",
+    "#y_float = y.astype(float)\n",
     "\n",
-    "y_scaled = np.divide(y,100.0)\n",
-    "print(y_scaled[20:40])\n",
+    "#y_scaled = np.divide(y,100.0)\n",
+    "#print(y_scaled[20:40])\n",
     "\n",
-    "logger.info(\"Trying a large DNN\")\n",
+    "#logger.info(\"Trying a large DNN\")\n",
     "\n",
-    "from sklearn.utils import class_weight\n",
+    "#from sklearn.utils import class_weight\n",
     "\n",
     "filters = 250\n",
-    "kernel_size = 2\n",
+    "kernel_size = 1\n",
     "hidden_dims = 5000\n",
     "\n",
     "X_reshaped = np.expand_dims(X, axis=2)\n",
@@ -265,21 +271,19 @@
     "    #model.add(Convolution1D(64, activation='sigmoid'))\n",
     "    #model.add(Dense(32, activation='sigmoid'))\n",
     "    #model.add(Dense(1, activation='sigmoid'))\n",
-    "    model.compile(loss='mean_squared_error', optimizer='nadam', metrics=[\"mse\"])\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\"accuracy\"])\n",
     "    return model\n",
     "\n",
-    "for train_index, test_index in kf.split(X_reshaped,y_scaled) :\n",
+    "for train_index, test_index in kf.split(X,y) :\n",
     "\n",
     "    X_train = X[train_index]\n",
     "    X_test = X[test_index]\n",
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
-    "    class_weights = class_weight.compute_class_weight('balanced', np.unique(y_train), y_train)\n",
-    "\n",
     "\n",
     "    model = KerasRegressor(build_fn=create_model, epochs=10, batch_size=100, verbose=1)\n",
-    "    model.fit(X_train[:,None,:],y_train,class_weight=class_weights)\n",
-    "    y_pred = model.predict(X_test)\n",
+    "    model.fit(X_train[:,None,:],y_train)\n",
+    "    y_pred = model.predict(X_test[:,None,:])\n",
     "        \n",
     "    y_pred_binary = [y > .4 for y in y_pred]\n",
     "    y_test_binary = [y > .4 for y in y_test]\n",
@@ -476,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
